deployments/backend_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    app: backend
spec:
  # how many replicas of this application should run
  replicas: 3
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        # The image of the application
        # Use ghcr.io/memetoasty/kubernetes-intro/backend:latest if you do not want to use a local image
        image: k8s-intro-backend:latest
        # Only used so that minikube can get the image
        # Remove if you want to use a remote image
        imagePullPolicy: Never
        ports:
        # The port that the container is exposing
        - containerPort: 3000
        resources:
          # if container wants to consume more, it will be killed
          limits:
            cpu: "0.5"
            memory: "500M"
          # gives the kube-scheduler information on which node to deploy the pod
          requests:
            cpu: "0.5"
            memory: "500M"
