deployments/frontend_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: frontend
spec:
  # how many replicas of this application should run
  replicas: 3
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        # The image of the application
        image: k8s-intro-frontend:latest
        # Only used so that minikube can get the image
        imagePullPolicy: Never
        ports:
        # The port that the container is exposing
        - containerPort: 3000
        # Environment variables that are passed into the container
        resources:
          # if container wants to consume more, it will be killed
          limits:
            cpu: 500m
            memory: 500m
          # gives the kube-scheduler information on which node to deploy the pod
          requests:
            cpu: 500m
            memory: 500m
