deployments/backend_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  # These selectors decide which pod is exposed through this service
  selector:
    app: backend
  ports:
    - protocol: TCP
      # Port that this service listens to
      port: 80
      # Port that is exposed from the pods
      targetPort: 3000
  # This type defines how the pods are exposed
  type: NodePort
